src/test/rustdoc-ui/issue-61732.rs
// This previously triggered an ICE.

pub(in crate::r#mod) fn main() {}
//~^ ERROR expected module, found unresolved item
